css/style.css
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

body {
    font-family: sans-serif;
    line-height: 1.45em;
    margin-bottom: 115px;
}

header {
    display: none;
}


a, a:visited, a:hover, a:active, *::part(link) {
    color: rgb(90,90,90);
    font-style: italic;
}

h1, h2, h3, h4 {
    color: rgb(60,60,60);
    font-weight: 400;
    text-align: center;
    text-transform: uppercase;
}

h2 {
    margin-bottom: 30px;
    margin-top: 75px;
}

h3 {
    line-height: 1.75em;
}

p {
    line-height: 1.8em;
    margin-bottom: 1em;
    margin-top: 1em;
    text-align: justify;
}


.text-content {
    word-break: break-word;
}

.text-center {
    text-align: center;
}


/* Animação de fade out */
@keyframes fadeout {
    from {opacity: 1}
    to {opacity: 0}
}

.fadeout {
    animation: fadeout 0.3s;
}



/* Classes base para o layout em grid */
.grid {
    display: grid;
}

.grid > .grid {
    padding: 0;
}

.grid-center {
    justify-items: center;
}

.grid-middle {
    align-content: center;
}

.grid-top {
    align-content: start;
}

.grid-1-1 {
    grid-template-columns: 1fr 1fr;
}

.grid-1-2 {
    grid-template-columns: 1fr 2fr;
}

.grid-3-4 {
    grid-template-columns: 3fr 4fr;
}

.grid-3-6 {
    grid-template-columns: 3fr 6fr;
}

.grid-7-x {
    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
}

.grid-1-1-1 {
    grid-template-columns: 1fr 1fr 1fr;
}

.full-grid-2-col {
    grid-column: 1/3;
}

.col-gap-1 {
    grid-column-gap: 1em;
}

.col-gap-2 {
    grid-column-gap: 2em;
}

.col-gap-4 {
    grid-column-gap: 4em;
}

.row-gap-1 {
    grid-row-gap: 1em;
}

.row-gap-2 {
    grid-row-gap: 2em;
}


/* Página inicial */
.grid.home {
    min-height: calc(100vh - 115px);
    align-content: center;
    justify-items: center;
}

.grid.home > .home-logo {
    background: url('../images/logo.svg') no-repeat center center;
    background-size: 100% auto;
    color: transparent;
}

.grid.home > .home-content > .description {
    color: rgb(60,60,60);
    font-size: 18pt;
    line-height: 25pt;
    text-transform: uppercase;
}

.grid.home > .home-content > .description > span {
    display: block;
}

.grid.home > .home-content > .subtitle {
    color: rgb(110,110,110);
    font-size: 14pt;
    line-height: 165%;
}

.grid.home > .github-icon {
    justify-self: center;
}




/* Página About */

.whoiam b, .whoiam strong, .whoiam a {
    color: rgb(0,0,0);
}

.photoarea > img {
    border-radius: 100% 100% 15px 100%;
    box-shadow: 0 3px 5px rgba(0,0,0,0.2);
    margin: 15px auto;
    max-height: 200px;
    max-width: 200px;
}

.personal-info {
    line-height: 175%;
    margin-bottom: 30px;
    text-align: center;
}

.personal-info > span {
    display: block;
    margin: 5px;
}

.personal-info > span.location {
    margin: 25px auto 0;
    color: rgb(90,90,90);
}
    


@media (min-width: 901px) {
    /* Página inicial */
    .grid.home > .home-logo {
        justify-self: end;
        height: 200px;
        max-width: 300px;
        width: 90%;
    }

    .grid.home > .home-content {
        justify-self: start;
        justify-items: start;
    }

    .grid.home > .home-content > .description {
        align-self: end;
    }

    .grid.home > .home-content > .subtitle {
        align-self: start;
        justify-self: start;
    }


    /* Página About */
    .whoiam {
        justify-self: end;
        margin-top: 1em;
        max-width: 500px;
        width: 100%;
    }

    .self-description {
        justify-self: start;
        max-width: 700px;
        padding: 5px 40px;
    }


    /* Página Projetos */    
    .grid.projects-list {
        justify-self: end;
        max-width: 500px;
        padding: 0 20px;
        width: 100%;
    }

    .project-info {
        border-color: rgb(230,230,230);
        margin: 40px 10px 0 0;
        max-height: calc(100vh - 155px);
        max-width: 700px;
        opacity: 0.2;
        padding: 5px 40px;
        position: sticky;
        top: 40px;
        background: url(/images/projects-background.svg) no-repeat center center;
        background-size: 50% auto;
    }
    
    .project-info.open {
        align-self: start;
        background: none;
        border: 1px solid rgb(230,230,230);
        border-radius: 15px;
        box-shadow: 0 3px 10px rgba(0,0,0,0.1);
        justify-self: start;
        overflow: auto;
        opacity: 1;
    }

    project-list-item {
        border-radius: 10px;
        transition: 0.3s;
    }

    project-list-item.active {
        box-shadow: 0 0 0 1px rgb(200,200,200);
    }
}


@media (max-width: 900px) {
    /* Layout em Grid */
    .grid {
        position: relative;
        padding: 15px;
    }

    .grid-1-1, 
    .grid-1-2, 
    .grid-3-4, 
    .grid-3-6 {
        grid-template-columns: 1fr;
    }

    .grid-1-1 > div, 
    .grid-1-2 > div, 
    .grid-3-4 > div, 
    .grid-3-6 > div {
        text-align: center;
    }

    .grid-1-1-1 > div {
        grid-column: 1/4;
        text-align: center;
    }

    .grid-7-x > div {
        grid-column: 1/8;
        text-align: center;
    }

    .always-col > div {
        grid-column: auto;
    }



    /* Página inicial */
    .grid.home {
        grid-template-columns: 1fr;
    }

    .grid.home > .home-logo {
        height: 160px;
        max-width: 300px;
        width: 75%;
    }


    /* Página About */
    .self-description {
        grid-column: 1/3;
        padding: 15px;
    }


    /* Página Projects */
    .grid.projects-list {
        padding: 0 5px;
        z-index: 1;
    }


    .mobile-overlapping > * {
        grid-row-start: 1;
        grid-column-start: 1;
    }

    .mobile-overlapping > .project-info.open {
        background-color: rgb(255,255,255);
        z-index: 2;
    }

    .projects-list.mobile-hidden {
        display: none;
    }
}

